@@ -6684,6 +6684,7 @@ zxvision_known_window_names zxvision_known_window_names_array[]={
     {"debugioports",menu_debug_ioports},
     {"hexeditor",menu_debug_hexdump},
     {"corestatistics",menu_about_core_statistics},
+    {"viewsensors",menu_debug_view_sensors},
 
 	{"",NULL} //NO BORRAR ESTA!!
 };
